events-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-api
  labels:
    app: events-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-api
  template:
    metadata:
      labels:
        app: events-api
    spec:
      containers:
      - name: events-api
        image: jschool/events-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
