gateway-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
  labels:
    app: gateway-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
      - name: gateway-api
        image: jschool/gateway-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
