recon-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recon-db
  labels:
    app: recon-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recon-db
  template:
    metadata:
      labels:
        app: recon-db
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: recon-db
        image: jschool/recon-db:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        # volumeMounts:
        #   - name: psql-vol
        #     mountPath: /var/lib/postgres/data
      # volumes:
      # - name: psql-vol
      #   persistentVolumeClaim:
      #     claimName: psql-pvc
