team-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-api
  labels:
    app: team-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-api
  template:
    metadata:
      labels:
        app: team-api
    spec:
      containers:
      - name: team-api
        image: jschool/team-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
