data-collection-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-collection-service
  labels:
    run: data-collection-service
spec:
  ports:
    - port: 3000
  selector:
    run: data-collection-service
