events-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-api
  labels:
    app: events-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: events-api
