gateway-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
  labels:
    app: gateway-api
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 30001
  selector:
    app: gateway-api
