match-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match-api
  labels:
    app: match-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: match-api
