recon-db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recon-db
  labels:
    app: recon-db
spec:
  ports:
    - port: 5432
  selector:
    app: recon-db
