recon-deployer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recon-deployer
  labels:
    name: recon-deployer
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30003
  selector:
    run: recon-deployer
