recon-site.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recon-site
  labels:
    app: recon-site
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 30001
  selector:
    app: recon-site
